<resources>
    <string name="app_name" translatable="false">Hair Lines</string>
    <string name="app_slogan">Le juste look.</string>
    <string name="app_share">Partager \"Hair Lines\" avec:</string>
    <string name="app_share_message">Votre chirurgien ésthéticien disponible ici:</string>
    <string name="app_welcome_message">Merci d\'avoir téléchargé la plate forme android de \"Hair Lines\".</string>
    <string name="app_owner" translatable="false">M. Emmani</string>
    <string name="app_owner_post">Propriétaire et gérant</string>
    <string name="app_version" translatable="false">Version 1.0</string>
    <string name="app_history">Hair Lines est un cadre agréable établie depuis Janvier 2000.</string>
    <string name="app_location">Situé en plein coeur de Yaoundé, capital du Cameroun ; Notre établissement se trouve à Tsinga, 50 mètres en face du snack-bar dubai.</string>
    <string name="app_town">Yaoundé - Cameroun</string>
    <string name="app_address">Tsinga, entrée face dubai.</string>
    <string name="app_street">741, rue 2375 Tsinga</string>
    <string name="app_orange_number" translatable="false">699 651 880</string>
    <string name="app_mtn_number" translatable="false">699 809 954</string>
    <string name="app_number" translatable="false">699 651 880 / 699 809 954</string>
    <string name="app_whatsapp_number" translatable="false">@string/app_orange_number</string>
    <string name="trixobase_description">trixobase est une marque déposée par Trixobase Enterprise.\nCommunauté travaillant ensemble pour une production 100% camerounaise d\'applications mobiles de pointes.</string>
    <string name="trixobase" translatable="false">trixobase</string>
    <string name="trixobase_copyrights" translatable="false">© 2021 Trixobase Enterprise</string>
    <string name="trixobase_rights" translatable="false">All rights reserved</string>
    <string name="trixobase_mail" translatable="false">mail@trixobase.com</string>
    <string name="trixobase_name" translatable="false">Noumia Jean-Paul</string>
    <string name="trixobase_post">Chef projet</string>
    <string name="trixobase_address">Cameroun - Yaoundé</string>
    <string name="trixobase_number" translatable="false">657234045 / 674667431</string>
    <string name="trixobase_street">Adresse: 129 Rue 2378</string>
    <string name="loading">Chargement..</string>
    <string name="loading_page">Chargement de la page..</string>
    <string name="begin">Démarrer</string>
    <string name="create_app_account">Créez un compte et profitez…</string>
    <string name="option_one">Vos réservations plus rapides</string>
    <string name="option_two">Vos promotions accessibles par clic</string>
    <string name="option_three">Recevez des notifications d\'évènements</string>
    <string name="option_four">Et plein d\'autres offres exclusives :)</string>
    <string name="policy_rule"><u>J\'accepte d\'avoir lu et approuver les conditions générales d\'utilisations.</u></string>
    <string name="contact_us_main_title">Nous aimerions recevoir de vos nouvelles !</string>
    <string name="title_login">Connectez-vous à votre compte</string>
    <string name="title_signup">Créer un compte</string>
    <string name="title_profile">Mon profil</string>
    <string name="title_profile_sub">Aperçu</string>
    <string name="contact_us_explain">Avez-vous des préoccupations ou des commentaires? Remplissez ce bref formulaire et nous vous répondrons très bientôt. Vous voudrez peut-être vérifier</string>
    <string name="password_explain">Entrez votre adresse email, nous vous enverrons les instructions sur comment réinitialiser votre mot de passe.</string>
    <string name="label_day_lundi">Lundi</string>
    <string name="label_day_mardi">Mardi</string>
    <string name="label_day_mercredi">Mercredi</string>
    <string name="label_day_jeudi">Jeudi</string>
    <string name="label_day_vendredi">Vendredi</string>
    <string name="label_day_samedi">Samedi</string>
    <string name="label_day_dimanche">Dimanche</string>
    <string name="label_month_jan">Janvier</string>
    <string name="label_month_fev">Février</string>
    <string name="label_month_mar">Mars</string>
    <string name="label_month_avr">Avril</string>
    <string name="label_month_may">Mai</string>
    <string name="label_month_jun">Juin</string>
    <string name="label_month_juil">Juillet</string>
    <string name="label_month_aou">Août</string>
    <string name="label_month_sep">Septembre</string>
    <string name="label_month_oct">Octobre</string>
    <string name="label_month_nov">Novembre</string>
    <string name="label_month_dec">Décembre</string>
    <string name="entity_drink">Boissons</string>
    <string name="entity_product">Produits</string>
    <string name="entity_haircut">Coiffures</string>
    <string name="status_receive">Expiré</string>
    <string name="status_pending">Se faire livrer</string>
    <string name="status_progress">Livraison en cours..</string>
    <string name="type_drink_beer">Bières blondes et brunes</string>
    <string name="type_drink_wine">Vins rouges &amp; Vins blancs</string>
    <string name="type_drink_champagne">Vins mousseux &amp; Liqueurs</string>
    <string name="type_drink_sky">Scotch &amp; Whisky</string>
    <string name="type_drink_juice">Jus</string>
    <string name="type_haircut_natte">Nattes</string>
    <string name="type_haircut_chignon">Chignon</string>
    <string name="type_product_cosmetic">Produits cosmétiques</string>
    <string name="type_product_lotion">Crèmes &amp; Lotions</string>
    <string name="type_product_parfun">Parfuns &amp; Eaux de Toilette</string>
    <string name="type_product_shampooing">Gèl &amp; Shampooing</string>
    <string name="type_plate_pizza">Pizza</string>
    <string name="type_plate_fastfood">Fast-Food</string>
    <string name="information" translatable="false">Information</string>
    <string name="promotions" translatable="false">Promotions</string>
    <string name="reception" translatable="false">Réception</string>
    <string name="catalog">Catalogue</string>
    <string name="subscription">Abonnement</string>
    <string name="products">Produits</string>
    <string name="supplement_price"><u>Frais supplémentaires:</u></string>
    <string name="soldes">Soldes</string>
    <string name="cancel">Annuler</string>
    <string name="_back">Retour</string>
    <string name="_continue">Continuer</string>
    <string name="buy">Acheter</string>
    <string name="_yes">Oui</string>
    <string name="_no">Non</string>
    <string name="share">Partager</string>
    <string name="reglage">Réglage</string>
    <string name="rule">Règles &amp; Conduites</string>
    <string name="africa">Afrique</string>
    <string name="about">A propos</string>
    <string name="help">Aides</string>
    <string name="home">Acceuil</string>
    <string name="menu">Menu</string>
    <string name="shop">Boutique</string>
    <string name="quantity">Quantité</string>
    <string name="overflow">Apercu</string>
    <string name="amount">Montant</string>
    <string name="_amount"><u>Montant:</u></string>
    <string name="mark">Remarque</string>
    <string name="hour">Heure</string>
    <string name="save">Enregistrer</string>
    <string name="history">Historique</string>
    <string name="location">Localisation</string>
    <string name="activate">Activer</string>
    <string name="activation" translatable="false">Activation</string>
    <string name="setting">Paramètres</string>
    <string name="warning">Attention</string>
    <string name="cameroon">Cameroun</string>
    <string name="messaging">Messagerie</string>
    <string name="name">Nom</string>
    <string name="new_way">Nouveauté</string>
    <string name="full_name">Nom &amp; prénom</string>
    <string name="surname">Prénom</string>
    <string name="change">changer</string>
    <string name="edit">Modifier</string>
    <string name="required">Recquis</string>
    <string name="username">Utilisateur</string>
    <string name="logged">Connecté</string>
    <string name="registered">Inscrit(e)</string>
    <string name="editText_label_username">Utilisateur*</string>
    <string name="editText_label_first_name">Prénom*</string>
    <string name="editText_label_last_name">Nom*</string>
    <string name="editText_label_name">Nom</string>
    <string name="editText_label_surname">Prénom</string>
    <string name="editText_label_number">Numéro de téléphone*</string>
    <string name="editText_label_phone_code" translatable="false">Phone code*</string>
    <string name="editText_label_email">Email*</string>
    <string name="editText_label_birth_date">Date de naissance</string>
    <string name="editText_label_web_site">Site web</string>
    <string name="editText_label_subject">Sujet</string>
    <string name="editText_label_text">Texte*</string>
    <string name="helper_date">jj/mm/aaaa</string>
    <string name="quit_application">Quitter l\'application ?</string>
    <string name="contacts" translatable="false">Contacts</string>
    <string name="contact_us">Contactez nous</string>
    <string name="rate_us">Evaluez nous</string>
    <string name="my_account">Mon compte</string>
    <string name="my_chart">Mon panier</string>
    <string name="my_bill">Facture(s)</string>
    <string name="your_bill"><u>Votre facture :</u></string>
    <string name="add_chart">Ajouter au panier</string>
    <string name="buy_or_reserve">Achat/Réservation</string>
    <string name="shop_haircut">Salon de coiffure</string>
    <string name="facebook" translatable="false">Facebook</string>
    <string name="gallery">Galerie d\'images</string>
    <string name="google" translatable="false">Google</string>
    <string name="moderate_consomation">A consommer avec modération.</string>
    <string name="forbided_consomation">Interdit aux mineurs (-21ans).</string>
    <string name="groups">Groupes</string>
    <string name="good_consomation">Bonne dégustation.</string>
    <string name="any_promotion">(Aucune promotion pour le moment)</string>
    <string name="any_message">(Pas de message)</string>
    <string name="available_soon">(Bientôt disponible)</string>
    <string name="search_here">Entrez votre recherche ici</string>
    <string name="amount_to_buy">Montant total</string>
    <string name="date_reserve">Date de réservation:</string>
    <string name="hour_reserve">Heure de réservation:</string>
    <string name="shop_guaranty">Tous nos produits sont garantis satisfaits ou remboursés.</string>
    <string name="with_livrable">avec livraison (1.000 Fcfa)</string>
    <string name="signup">S\'identifier</string>
    <string name="signupp">S\'inscrire</string>
    <string name="login">Connexion</string>
    <string name="picture_gallery">Galerie photo</string>
    <string name="the_team">L\'équipe</string>
    <string name="haircut_saloon">Salon de coiffure</string>
    <string name="displaying_message">Tous vos messages s\'afficheront ici.</string>
    <string name="box_message">Boîte de réception</string>
    <string name="about_us">A propos</string>
    <string name="send">Envoyer</string>
    <string name="send_with">Envoyer via..</string>
    <string name="share_with">Partager via:</string>
    <string name="service_available"><u>Services pris en charge:</u></string>
    <string name="create_account_number">Créez votre compte (1/3)</string>
    <string name="create_account_code">Créez votre compte (2/3)</string>
    <string name="create_account_name">Créez votre compte (3/3)</string>
    <string name="number_phone">Numéro de téléphone</string>
    <string name="new_message">Nouveau message</string>
    <string name="tap_your_phonecode">Entrez le code reçu par sms.</string>
    <string name="terms_of_services">Conditions d\'Utilisation</string>
    <string name="you_are">Vous êtes:</string>
    <string name="a_boy">Un homme</string>
    <string name="a_girl">Une femme</string>
    <string name="or">Ou</string>
</resources>