<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/dialog_content_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sc_black"
        android:gravity="center"
        android:padding="5dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="90dp"
            android:src="@drawable/iv_trixobase_enterprise"
            android:contentDescription="TODO" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:text="© 2007 Trixobase Enterprise, all rights reserved."
            android:textSize="8sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:fontFamily="@font/trixobase"
            android:gravity="center"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/trixobase_description"
        android:textSize="13sp"
        android:textColor="@color/white"
        android:textAlignment="inherit"
        android:fontFamily="@font/trixobase"
        android:gravity="left"
        tools:ignore="RtlHardcoded" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:gravity="top">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trixobase_address"
                android:textSize="10sp"
                android:textColor="@color/white"
                android:fontFamily="@font/trixobase"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trixobase_street"
                android:textSize="10sp"
                android:textColor="@color/white"
                android:fontFamily="@font/trixobase"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trixobase_number"
                android:textSize="10sp"
                android:textColor="@color/white"
                android:fontFamily="@font/trixobase"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trixobase_mail"
                android:textSize="10sp"
                android:textColor="@color/white"
                android:fontFamily="@font/trixobase"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trixobase_name"
                android:textSize="10sp"
                android:textColor="@color/white"
                android:fontFamily="@font/trixobase"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trixobase_post"
                android:textSize="10sp"
                android:textColor="@color/white"
                android:fontFamily="@font/trixobase"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
