<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    android:background="@drawable/sc_dialog">

    <LinearLayout
        android:id="@+id/ll_dialog_title_id"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical|start"
        android:padding="10dp"
        android:orientation="horizontal"
        android:background="@drawable/sc_dialog_title"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/iv_app"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_dialog_title_id"
            style="@style/TextView_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:text="@string/information"
            android:textSize="20sp"
            android:textColor="@color/dialog_title_text"/>
    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_dialog_message_id"
        style="@style/TextView_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="120dp"
        android:layout_margin="10dp"
        android:textColor="@color/dialog_content_text"
        android:textSize="22sp"
        android:textStyle="normal"
        android:textAlignment="inherit"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_dialog_title_id"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/sc_dialog_bottom"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/tv_dialog_message_id"
        tools:ignore="MissingConstraints">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_dialog_no_id"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:theme="@style/Theme.Trixobase.Button.Home"
            android:text="@string/cancel"
            android:fontFamily="@font/roboto" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_dialog_yes_id"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.Trixobase.Button.Home"
            android:text="@string/_yes"
            android:fontFamily="@font/roboto" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>